--- a/index.html
+++ b/index.html
@@ -45,19 +45,19 @@
       <h2>Gallery</h2>
       <div class="gallery-grid" id="galleryGrid">
         <figure>
-          <img src="images/sunghoon1.jpg" alt="Sunghoon 1">
+          <img src="sunghoon1.jpg" alt="Sunghoon 1">
           <figcaption>Sunghoon — portrait</figcaption>
         </figure>
         <figure>
-          <img src="images/sunghoon2.jpg" alt="Sunghoon 2">
+          <img src="sunghoon2.jpg" alt="Sunghoon 2">
           <figcaption>Sunghoon — selfie</figcaption>
         </figure>
         <figure>
-          <img src="images/sunghoon3.jpg" alt="Sunghoon 3">
+          <img src="sunghoon3.jpg" alt="Sunghoon 3">
           <figcaption>Sunghoon — concept</figcaption>
         </figure>
         <figure>
-          <img src="images/sunghoon4.jpg" alt="Sunghoon 4">
+          <img src="sunghoon4.jpg" alt="Sunghoon 4">
           <figcaption>Sunghoon — on stage</figcaption>
         </figure>
       </div>
@@ -84,3 +84,4 @@
   <script src="script.js"></script>
 </body>
 </html>
+
