--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <main>
     <section id="home" class="hero">
       <div class="hero-inner">
-        <img src="images/sunghoon1.jpg" alt="Sunghoon hero" class="hero-pic">
+        <img src="sunghoon1.jpg" alt="Sunghoon hero" class="hero-pic">
         <div class="hero-text">
           <h1>Park Sunghoon</h1>
           <p>ENHYPEN • Figure skater turned idol • Visual & dancer</p>
@@ -84,4 +84,5 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
